# Multi-hierarchical-Surrogates

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py  train_debug.py
examples/: plate_bending.py
src/: __init__.py
src/data/: dataset.py
src/layers/: __init__.py  graph_conv.py
src/models/: __init__.py  graph_autoencoder.py  multi_hierarchical.py  surrogate.py
src/utils/: mesh_sampling.py  sparse_utils.py
tests/: conftest.py  test_graph_autoencoder.py  test_graph_conv.py  test_mesh_sampling.py  test_multi_hierarchical.py  test_sparse_utils.py  test_surrogate.py
