[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "multi-hierarchical-surrogates"
version = "0.1.0"
description = "Multi-hierarchical graph convolutional network surrogate for structural mechanics simulations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Jonas Kneifl" },
]
keywords = [
    "surrogate model",
    "graph neural network",
    "chebyshev convolution",
    "mesh hierarchy",
    "structural mechanics",
    "model order reduction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "h5py>=3.8.0",
    "open3d>=0.17.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
